fix: whitespace issues and making buttons flow properly.

--- a/content/styles.css
+++ b/content/styles.css
@@ -119,7 +119,7 @@ article {
   margin-block: 0;
   margin-inline: auto;
   line-height: 2.0em;
-  padding-top: 1em;
+
   padding-bottom: 2em;
   letter-spacing: 0.01em;
   text-decoration-color: var(--color-text);
@@ -133,6 +133,7 @@ article h1 {
   max-width: 100ch;
   margin-inline: auto;
   font-size: 1.3em;
+  margin-top: 0.3em;
   margin-bottom: 0.3em;
 }
 
@@ -358,6 +359,12 @@ a.button {
 
 .cta-box h3 {
   margin-top: 0;
+}
+
+.cta-box .button {
+  display: block;
+  width: fit-content;
+  margin-inline: auto;
 }
 
 
